# perp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/declarations/perp/: index.d.ts  index.js  perp.did  perp.did.d.ts  perp.did.js
src/frontend/: package.json
src/frontend/src/: App.tsx  main.tsx
src/perp/: Cargo.toml  perp.did
src/perp/src/: integration_tests.rs  lib.rs  types.rs
src/perp/src/corelib/: mod.rs  order_lib.rs  swap_lib.rs
src/vault/: Cargo.toml
src/vault/src/: lib.rs
src/vault/src/core_lib/: staking.rs
