[package]
name = "perp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]




[dependencies]
candid = "0.10"
ic-cdk = "0.17.0"
ciborium = "0.2.1"
futures = "0.3"
icrc-ledger-types = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.17.0"
ic-stable-structures = "0.6.5"
num-traits = "0.2"
sha2 = "0.10.8"
ic-cdk-timers = "0.11.0"


[dev-dependencies]
pocket-ic = "6.0.0"








